Push to github!

--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "miaou"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Acaretia/The-Cat-that-tells.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Acaretia/The-Cat-that-tells/issues"
+  },
   "keywords": [
     "le",
     "chat",
