--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,8 @@
 {
     "channelId": "<Id of the channel where you want to receive the logs>",
     "ignoredChannels": [
-        "<List of the different ignored rooms (do not add the channelId, it's automatically ignored)>"
+        "<List of the different ignored rooms>",
+        "<Do not add the channelId, it's automatically ignored>",
     ],
-    "token": "<Token of your bot>"
+    "token": "<Token of your bot>",
 }
