--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "messages"
   ],
   "author": "Acaretia",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "discord.js": "^11.4.2",
-    "express": "^4.16.4"
+    "discord.js": "^11.4.2"
   }
 }
